@@ -111,8 +111,8 @@ unsplitOn(se_list)
 
 }
 \seealso{
-\code{\link[=splitByRanks]{splitByRanks}}
-\code{\link[=unsplitByRanks]{unsplitByRanks}}
+\code{\link[=agglomerate-methods]{agglomerateByRanks}}
+\code{\link[=agglomerate-methods]{unsplitByRanks}}
 \code{\link[=merge-methods]{mergeRows}},
 \code{\link[scuttle:sumCountsAcrossFeatures]{sumCountsAcrossFeatures}},
 \code{\link[=agglomerate-methods]{agglomerateByRank}},
