@@ -5,7 +5,6 @@ reference:
 - contents:
   - agglomerateByRank
   - mergeRows
-  - splitByRanks
   - splitOn
   - mergeSEs
 - subtitle: Transformation
